# eq_demo_ith

./: .gitignore  pyproject.toml
src/: EDA.ipynb  EDA.py  main.py
