[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your_project"
version = "0.1.0"
description = "A Python project with data science dependencies"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "notebook==7.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3